# CloudCompare

./: .gitmodules  关于无法生成有效pcl插件的解释.txt
0mineAdd/: ccPointCloudImg.cpp  ccPointCloudImg.h
CC/: CMakeLists.txt
libs/qCC_db/: CMakeLists.txt  ccObject.h
libs/qCC_io/: CMakeLists.txt
plugins/core/qPCL/: CMakeLists.txt
plugins/core/qPCL/PclIO/: CMakeLists.txt
plugins/core/qPCL/PclUtils/: CMakeLists.txt
plugins/example/: CMakeLists.txt
plugins/example/DeleteIsland/: CMakeLists.txt  DeleteIsland.cpp  DeleteIsland.h  DeleteIsland.qrc  DeleteIslandDialog.cpp  DeleteIslandDialog.h  DeleteIslandDialog.ui  info.json  moc_DeleteIslandDialog.cpp
plugins/example/ExampleGLPlugin/: CMakeLists.txt
plugins/example/ExampleIOPlugin/: CMakeLists.txt
plugins/example/ExamplePlugin/: CMakeLists.txt  ExamplePlugin.cpp  info.json
qCC/: CMakeLists.txt
